--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 	"devDependencies": {
 		"@chromatic-com/storybook": "3.2.5",
 		"@eslint/js": "^9.21.0",
+		"@storybook/addon-a11y": "^8.6.4",
 		"@storybook/addon-essentials": "8.6.3",
 		"@storybook/blocks": "8.6.3",
 		"@storybook/experimental-addon-test": "8.6.3",
