--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"@storybook/react": "8.6.3",
 		"@storybook/react-vite": "8.6.3",
 		"@storybook/test": "8.6.3",
+		"@types/node": "^22.13.10",
 		"@types/react": "^19.0.10",
 		"@types/react-dom": "^19.0.4",
 		"@typescript-eslint/eslint-plugin": "^8.25.0",
