--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "eisenhower-ui",
-	"version": "0.0.3",
+	"version": "0.0.4",
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
@@ -53,6 +53,7 @@
 		"typescript": "~5.7.2",
 		"typescript-eslint": "^8.24.1",
 		"vite": "^6.2.0",
+		"vite-plugin-dts": "^4.5.3",
 		"vitest": "^3.0.7"
 	},
 	"eslintConfig": {
