--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
 	"name": "eisenhower-ui",
-	"version": "0.0.4",
+	"version": "0.0.5",
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
+		"prepare": "tsc -b && vite build",
 		"build": "tsc -b && vite build",
 		"lint": "eslint .",
 		"preview": "vite preview",
@@ -46,6 +47,7 @@
 		"eslint-plugin-react-refresh": "^0.4.19",
 		"eslint-plugin-storybook": "^0.11.3",
 		"globals": "^15.15.0",
+		"lint-staged": "^15.4.3",
 		"playwright": "^1.50.1",
 		"postcss": "^8.5.3",
 		"prettier": "^3.5.3",
