--- a/package.json
+++ b/package.json
@@ -1,11 +1,20 @@
 {
 	"name": "eisenhower-ui",
-	"version": "0.0.5",
+	"version": "0.0.8",
 	"type": "module",
+	"main": "./dist/index.cjs.js",
+	"module": "./dist/index.es.js",
+	"types": "./dist/index.d.ts",
+	"files": [
+		"dist"
+	],
+	"publishConfig": {
+		"access": "public"
+	},
 	"scripts": {
 		"dev": "vite",
-		"prepare": "tsc -b && vite build",
-		"build": "tsc -b && vite build",
+		"prepare": "tsc -p tsconfig.build.json && vite build",
+		"build": "tsc -p tsconfig.build.json && vite build",
 		"lint": "eslint .",
 		"preview": "vite preview",
 		"storybook": "storybook dev -p 6006",
@@ -14,7 +23,6 @@
 	"dependencies": {
 		"@tailwindcss/vite": "^4.0.9",
 		"clsx": "^2.1.1",
-		"eisenhower-ui": "^0.0.2",
 		"framer-motion": "^12.4.10",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
